Update port configurations in Docker setup to use non-standard ports for Easypanel management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # Quitamos el mapeo de puertos fijo para que Easypanel lo gestione
-    # Easypanel asignará automáticamente los puertos disponibles
-    # ports:
-    #   - "80:80"
-    #   - "443:443"
-    #   - "8088:8088"
+    # Usamos puertos no estándar para evitar conflictos en Easypanel
+    ports:
+      - "8080:8080"  # Nginx
+      - "8081:8081"  # OpenLiteSpeed HTTP
+      - "8443:8443"  # OpenLiteSpeed HTTPS
+      - "7088:7088"  # OpenLiteSpeed Admin
     volumes:
       - ./www:/var/www/html
     restart: always
