Add missing directories and permissions in Docker setup; clean up Nginx MIME types

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,18 +20,11 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Corrección de MIME types para los test
+    # Corrección de MIME types para los test (no duplicados)
+    # Los tipos estándar ya están definidos en mime.types
+    # Sólo definimos los que puedan ser no estándar
     types {
-        application/javascript              js;
-        text/css                           css;
-        application/json                   json;
-        text/xml                           xml;
-        image/svg+xml                      svg;
-        application/x-font-ttf             ttf;
-        application/x-font-woff            woff;
         application/font-woff2             woff2;
-        application/vnd.ms-fontobject      eot;
-        image/x-icon                       ico;
     }
 
     # Configuración de logs
