Remove default Nginx welcome page and update configuration for SPA redirection

--- a/default.conf
+++ b/default.conf
@@ -33,7 +33,7 @@ server {
     }
 
     location ~* \.(woff)$ {
-        add_header Content-Type application/x-font-woff;
+        add_header Content-Type application/font-woff;
     }
 
     location ~* \.(woff2)$ {
@@ -73,5 +73,10 @@ server {
         deny all;
         access_log off;
         log_not_found off;
+    }
+
+    # Redirección para todas las otras URLs (para SPA)
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 }
